<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#FFF"
    >

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/email_hint"
            android:id="@+id/email" />

    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:id="@+id/password"
            android:hint="@string/password_hint" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/forgot_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:id="@+id/forgot"
        android:background="@null"
        android:textColor="@color/colorAccent"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:text="@string/sign_in"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:id="@+id/sign_in" />

        <Button
            android:text="@string/register"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:id="@+id/register" />

    </LinearLayout>


    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_google"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        />






</LinearLayout>