<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_gravity="center_vertical">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:visibility="visible"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/name_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/name_label" />

                            <TextView
                                android:id="@+id/item_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAlignment="textStart" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/initial_price_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/initial_price_label" />

                            <TextView
                                android:id="@+id/item_initial_price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAlignment="textStart" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/current_price_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/current_price" />

                            <TextView
                                android:id="@+id/item_current_price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAlignment="textStart" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/percentage_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/percentage_change" />

                            <TextView
                                android:id="@+id/item_percentage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAlignment="textStart" />

                        </LinearLayout>


                    </LinearLayout>



                </LinearLayout>
            </FrameLayout>

        </android.support.v7.widget.CardView>

</FrameLayout>
